Created methods for the app

--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
-                            <div id=""></div>
+                            <div id="animePlaylist"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- main -->
 
         <footer>
             <div class="content container-fluid">
@@ -40,18 +39,14 @@
                     <div class="col-sm-6">
 
                     </div>
-                    <!-- col-sm-6 -->
                     <div class="col-sm-6">
                         <nav class="navbar navbar-default" role="navigation">
                             <ul class="nav navbar-nav navbar-right">
                             </ul>
                         </nav>
                     </div>
-                    <!-- col-sm-6 -->
                 </div>
-                <!-- row -->
             </div>
-            <!-- content container -->
         </footer>
     </body>
 
